# Todo_UI_Chatbot

./: .gitignore  CLAUDE.md  README.md  check_schema.py  comprehensive_test.py  create_db_tables.py  debug_chat.py  debug_server.py  docker-compose.yml  final_test.py  final_verification_test.py  main.py  package-lock.json  package.json  pyproject.toml  simple_test.py  test_app.py  test_auth_endpoint.py  test_auth_fix.py  test_backend_fix.py  test_chat_functionality.py  test_chat_logic.py  test_chatbot.py  test_chatbot_db.py  test_chatbot_fix.py  test_conversation.py  test_db.py  test_endpoint_logic.py  test_env.py  test_fix.py  test_fixed_signup.py  test_full_flow.py  test_full_integration.py  test_login.py  test_login_new.py  test_min_length_password.py  test_output.txt  test_short_password.py  test_simple_chatbot.py  test_successful_auth.py  (+2 more)
.claude/: settings.local.json
.claude/commands/: sp.reverse-engineer.md
.specify/memory/: constitution.md
backend/: AUTHENTICATION_GUIDE.md  Dockerfile  create_db_tables.py  debug_auth.py  init_db.py  requirements.txt  test_auth_flow.py  test_chat_direct.py  test_env.py  test_imports.py  test_init.py  test_server.py  test_todo_app.db  todo_app.db
backend/src/: config.py  config_test.py  db.py  main.py
backend/src/mcp/: server.py
backend/tests/: debug_live.py  reproduce_issue.py  test_auth.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
specs/: phase3_plan.md  phase3_spec.md  phase3_tasks.md  plan.md  tasks.md
src/: cli.py  models.py  services.py
tests/: test_services.py
(+45 files in other folders)
