[project]
name = "todo-console-app"
version = "0.1.0"
description = "A command-line todo application that stores tasks in memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]